# Events_API

./: .env  .env.example  .gitignore  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  ruff.toml  run.sh  test.py
.github/workflows/: deploy.yml
.kube/: config
alembic/: env.py
alembic/versions/: 02ffaa4d8b32_add_first_name_last_name_to_registration.py  0977400d060f_init.py  2536d9c1c562_initial_tables.py  71149a01db08_initial_tables.py  ba5bb39ef782_initial_tables.py  bfd40d50ab89_initial_schema.py  ddb6715ad4e8_init.py
src/config/: db_conf.py
src/core/wsgi/: __init__.py  main.py
src/database/: db_connect.py  models.py
src/routers/: api.py  deps.py  events.py  health.py  sync.py
src/schemas/: event.py  place.py
src/services/: events_provider_client.py  sync_service.py
venv_events/: pyvenv.cfg
venv_events/Scripts/: activate  activate.bat
