[project]
name = "events-aggregator"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]",
    "requests",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "ruff>=0.15.5",
    "apscheduler>=3.10.4",
]


[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "alembic",
]
